force-app/main/default/objects/Lead/fields/Attempted_Sales__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Sales__c</fullName>
    <label>Attempted Sales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canon Connect</fullName>
            </value>
            <value>
                <fullName>Salesforce Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>