force-app/main/default/objects/Lead/fields/canon_app__Cadence_Template__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Cadence_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence Template</label>
    <referenceTo>canon_app__Cadence__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>