force-app/main/default/objects/Lead/fields/canon_app__Canon_Connect__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Canon_Connect__c</fullName>
    <description>Encrypted Mapping for Canon Connect</description>
    <label>Canon Connect</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>