force-app/main/default/objects/Lead/fields/canon_app__Connect_Id__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Connect_Id__c</fullName>
    <externalId>true</externalId>
    <label>Connect Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>