force-app/main/default/objects/Lead/fields/canon_app__Created_Equals_Modified__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Created_Equals_Modified__c</fullName>
    <formula>CreatedDate = LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Equals Modified</label>
    <type>Checkbox</type>
</CustomField>