force-app/main/default/objects/Lead/fields/canon_app__Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>