force-app/main/default/objects/Lead/fields/canon_app__Email_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Email_Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Maintain compliance by only email marketing those who opt in.</inlineHelpText>
    <label>Email Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>