force-app/main/default/objects/Lead/fields/canon_app__Text_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Text_Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Maintain compliance by only marketing via text to those who are opted in</inlineHelpText>
    <label>Text Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>