force-app/main/default/objects/Lead/fields/Current_Sale__c.field-meta.xml
<CustomField>
    <fullName>Current_Sale__c</fullName>
    <inlineHelpText>What we are attempting to pitch to the prospect right now.</inlineHelpText>
    <label>Current Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canon Connect</fullName>
            </value>
            <value>
                <fullName>Salesforce Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>