force-app/main/default/objects/Lead/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <label>Email Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept All</fullName>
            </value>
            <value>
                <fullName>Invaild</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Veriried</fullName>
                <label>Verified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>