force-app/main/default/objects/Lead/fields/First_Contacted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Contacted_Date_Time__c</fullName>
    <label>First Contacted Date Time</label>
    <type>DateTime</type>
</CustomField>