force-app/main/default/objects/Lead/fields/In_a_Campaign__c.field-meta.xml
<CustomField>
    <fullName>In_a_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marks in they are actively in a campaign</inlineHelpText>
    <label>In a Campaign</label>
    <type>Checkbox</type>
</CustomField>