force-app/main/default/objects/Lead/fields/Is_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>