force-app/main/default/objects/Lead/fields/Last_Connected_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Connected_Call_Date_Time__c</fullName>
    <label>Last Connected Call Date Time</label>
    <type>DateTime</type>
</CustomField>