force-app/main/default/objects/Lead/fields/Last_Inbound_Text_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Text_Date_Time__c</fullName>
    <label>Last Inbound Text Date Time</label>
    <type>DateTime</type>
</CustomField>