force-app/main/default/objects/Lead/fields/Lead_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To match Leads to Accounts and reference Account data.</description>
    <label>Lead Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>