force-app/main/default/objects/Lead/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <inlineHelpText>Reason for the Lead Status</inlineHelpText>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Wrong Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>