force-app/main/default/objects/Lead/fields/Still_at_Company__c.field-meta.xml
<CustomField>
    <fullName>Still_at_Company__c</fullName>
    <label>Still at Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>