force-app/main/default/objects/Lead/fields/Tailored_Message__c.field-meta.xml
<CustomField>
    <fullName>Tailored_Message__c</fullName>
    <inlineHelpText>Used to add a personal touch to automated communications. This can be used as the first paragraph in an email</inlineHelpText>
    <label>Tailored Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>