force-app/main/default/objects/Lead/listViews/Open_SF_Consulting_Leads.listView-meta.xml
<ListView>
    <fullName>Open_SF_Consulting_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Phone_Verified__c</columns>
    <columns>Email_Verified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified,Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Uplead</value>
    </filters>
    <label>Open SF Consulting Leads</label>
</ListView>